unpackaged/main/default/objects/ResourceAbsence/fields/ETI_Absence_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>ETI_Absence_Start_Time__c</fullName>
    <formula>Start</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Absence Start Time</label>
    <type>DateTime</type>
</CustomField>