unpackaged/main/default/objects/ResourceAbsence/fields/ETI_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>ETI_Request_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>