unpackaged/main/default/objects/ResourceAbsence/fields/ETI_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>ETI_Resource_Name__c</fullName>
    <formula>Resource.Name</formula>
    <label>Resource Name</label>
    <type>Text</type>
</CustomField>