unpackaged/main/default/objects/ResourceAbsence/validationRules/ETI_Restrict_Break_Record_type_for_App.validationRule-meta.xml
<ValidationRule>
    <fullName>ETI_Restrict_Break_Record_type_for_App</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp;  RecordType.DeveloperName = &#39;Break&#39; &amp;&amp;   CONTAINS($Profile.Name, &#39;SPEA&#39;)</errorConditionFormula>
    <errorMessage>Breaks cannot be created. Please create &#39;Non Availability&#39; for Absence.</errorMessage>
</ValidationRule>