unpackaged/main/default/objects/ResourceAbsence/validationRules/Restrict_Dates_change_when_Req_in_approv.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Dates_change_when_Req_in_approv</fullName>
    <active>true</active>
    <description>Restrict Changing of Absence Request Start Date and End Dates when Request under Approval.</description>
    <errorConditionFormula>(ISCHANGED( Start ) ||  ISCHANGED( End ) ) &amp;&amp; CONTAINS($Profile.Name, &#39;SPEA&#39;)</errorConditionFormula>
    <errorMessage>Absence Request Dates cannot be changed once it&#39;s Submitted. For any Modification, Please Delete the Request and Create a New one.</errorMessage>
</ValidationRule>